fix webpage alignment/resizing issues

--- a/interactive-tool/prototype/css/default.css
+++ b/interactive-tool/prototype/css/default.css
@@ -1,11 +1,15 @@
 	html, body
 	{
 		height: 100%;
+		width: 100%;
+		background: black;
 	}
 	
 	body
 	{
-		margin: 0px;
+	  height: 100%;
+	  width: 1200px;
+		margin: auto;
 		padding: 0px;
 		background: #151515;
 		font-family: 'Open Sans', sans-serif;
@@ -307,11 +311,13 @@
 	#header
 	{
 	  position: absolute;
-	  width: 1200px;
 	  min-width: 1200px;
 	}
-	
 
+  #logo .heading-navigator a:hover
+  {
+    color: yellow;
+  }
 /*********************************************************************************/
 /* Logo                                                                          */
 /*********************************************************************************/
@@ -377,6 +383,10 @@
 		color: #FFF;
 	}
 	
+	#menu li a:hover{
+	  color: yellow;
+	}
+	
 	#menu .current_page_item a
 	{
 		background: #068900;
@@ -433,7 +443,6 @@
 	#page
 	{
 		overflow: hidden;
-		padding: 6em 0em;
 	}
 
 /*********************************************************************************/
@@ -490,14 +499,14 @@
 
 	#featured
 	{
-		height: 500px;
-		width: 1200px;
-		top: 60px;
+		height: 660px;
+		width: 100%;
 		position: relative;
-		background-image: url(../images/banner.jpg);
-
+		background-image: url(../images/food-desert-2.png);
 		background-attachment: fixed;
-		background-repeat: repeat-x;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: 1200px 660px;
 	}
 
 
